# mfatsftp

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: ci.yml
examples/: list_remote.py
src/mfatsftp/: __init__.py  client.py  protocol.py  transport.py
tests/: fake_server.py  sftp_stdio_server.py  test_client.py  test_protocol.py  test_transport.py  test_transport_subprocess.py
